Add version when building with goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,6 +1,8 @@
 project_name: dbtcloud-terraforming
 builds:
   - main: ./cmd/dbtcloud-terraforming/main.go
+    ldflags:
+      - -s -w -X "github.com/dbt-labs/dbtcloud-terraforming/internal/app/dbtcloud-terraforming/cmd.versionString={{.Env.VERSION}}"
     env:
       - CGO_ENABLED=0
     goos:
