--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,4 +37,4 @@ brews:
     repository:
       owner: dbt-labs
       name: homebrew-dbt-cli
-      token: "{{ secrets.GH_HOMEBREW }}"
+      token: "{{ .Env.GH_HOMEBREW }}"
